music website progress

--- a/entrance.html
+++ b/entrance.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>The Music Arcade</title>
-  <link rel="stylesheet" href="css/entrance.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/entrance.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <h1></h1>
- 
-  <h2><a href="mymusic.html"><img src="/images/coin.png" alt="coin"></a></h2>
+    <div class="header">        
+        <p>Explore the work of upcoming artists.<br>Exclusive interviews, releases and more.</p>
+        <h1>Music World Wide</h1>
 
+    </div>
+
+    <div class="container">
+    <a href="/mymusic.html">
+        <div class="one">
+         <div class="link1">
+             <h1>FEATURED PROJECTS</h1>
+            </div>
+    </div>
+</a>
+    <a href="">
+        <div class="two">
+        <div class="link1">
+            <h1>INTERVIEWS</h1>
+        </div>
+    </div>
+</a>
+    <a href="">
+        <div class="three">
+        <div class="link1">
+            <h1>SUBMIT</h1>
+        </div>
+    </div>
+</a>
+    <a href="">
+        <div class="four">
+        <div class="link1">
+            <h1>MORE COMING SOON</h1>
+        </div>
+    </div>
+</a>
+    </div>
+
+
+<div class="footer">
+    <p>Submit music free.Set up interviews. Dropping something soon? Let us know.</p>
+</div>
+    
 </body>
 </html>
