--- a/entrance.html
+++ b/entrance.html
@@ -45,10 +45,16 @@
     </div>
 </a>
     </div>
+<br><br>
+<h1 class="past">MOST RECENT</h1>
+<div class="block">
+    <img src="/images/oscar-keys-58399-unsplash.jpg" alt="">
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A possimus repellendus ullam sequi exercitationem quam, quo accusamus tempora laudantium dolores, aspernatur suscipit soluta voluptatum veritatis nobis nostrum, porro error fugit nulla modi vel sit quasi. Delectus molestiae sed, possimus deleniti impedit earum assumenda optio in suscipit ex id tenetur officiis laudantium quisquam perferendis eius consequuntur tempore. Doloribus facilis culpa, aspernatur consectetur, dolore, vitae voluptate saepe voluptates at beatae temporibus sit?</p>
+</div>
 
 
 <div class="footer">
-    <p>Submit music free.Set up interviews. Dropping something soon? Let us know.</p>
+    <p>Set up interviews. Dropping something soon? Let us know and we will post it.</p>
 </div>
     
 </body>
