--- a/interviews.html
+++ b/interviews.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/entrance.css">
+    <link rel="stylesheet" href="css/interviews.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -42,16 +42,33 @@
 
 <br><br>
 
-<h1 class="past">MOST RECENT</h1>
-<div class="block">
-        <img src="/images/oscar-keys-58399-unsplash.jpg" alt="">
-        <p>
-            ARTIST: Lanky<br>
-            PROJECT: LineItUp! <br>
-            Lanky first gained buzz after catching a remix with ASAP MOB artists Twelvvy and ygAddy on the track 'Bands'. This week he drops his debut tape 'LineItUp!', stream all 7 songs on soundcloud.
-            <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/442434540&color=%230a0506&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-        </p>
+<h1 class="past">INTERVIEWS</h1>
+
+
+<div class="left">
+    <div class="block">
+    <img src="/images/oscar-keys-58399-unsplash.jpg" alt="">
     </div>
+    <div class="block">
+    <img src="/images/oscar-keys-58399-unsplash.jpg" alt="">
+    </div>
+    <div class="block">
+    <img src="/images/oscar-keys-58399-unsplash.jpg" alt="">
+    </div>
+    <div class="block">
+    <img src="/images/oscar-keys-58399-unsplash.jpg" alt="">
+    </div>
+</div>
+<div class="right">
+    <div class="block">
+    <img src="/images/oscar-keys-58399-unsplash.jpg" alt="">
+    </div>
+    <div class="block">
+    <img src="/images/oscar-keys-58399-unsplash.jpg" alt="">
+    </div>
+</div>
+
+
 
 
 <div class="footer">
