pages update, submit page and social media links

--- a/entrance.html
+++ b/entrance.html
@@ -9,8 +9,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="header">        
-        <p>Explore the work of upcoming artists.<br>Exclusive interviews, releases and more.</p>
+    <div class="header">
+        <p>
+            <a href=""><i class="fa fa-instagram" style="font-size:30px;"></a></i> 
+ 
+            <a href=""><i class="fa fa-twitter" style="font-size:30px;"></i></p>      
+                
         <h1><a href="/entrance.html">Music World Wide</a></h1>
 
     </div>
@@ -19,7 +23,7 @@
     <a href="/projects.html">
         <div class="one">
          <div class="link1">
-             <h1>PROJECTS</h1>
+             <h1>NEW RELEASES</h1>
             </div>
     </div>
 </a>
@@ -30,7 +34,7 @@
         </div>
     </div>
 </a>
-    <a href="">
+    <a href="/submit.html">
         <div class="three">
         <div class="link1">
             <h1>SUBMIT</h1>
@@ -54,9 +58,7 @@
     </div>
 
 
-<div class="footer">
-    <p>Set up interviews. Dropping something soon? Let us know and we will post it.</p>
-</div>
+
     
 </body>
 </html>
