--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,10 @@
 </head>
 <body>
 <div class="header">        
-        <p>Explore the work of upcoming artists.<br>Exclusive interviews, releases and more.</p>
+        <p><a href=""><i class="fa fa-instagram" style="font-size:30px;"></a></i> 
+
+            <a href=""><i class="fa fa-twitter" style="font-size:30px;"></i></p>      
+                
         <h1><a href="/entrance.html">Music World Wide</a></h1>
 </div>
 
@@ -18,7 +21,7 @@
 <a href="/projects.html">
 <div class="one">
         <div class="link1">
-        <h1>PROJECTS</h1>
+        <h1>NEW RELEASES</h1>
         </div>
 </div>
 </a>
@@ -29,7 +32,7 @@
 </div>
 </div>
 </a>
-<a href="">
+<a href="/submit.html">
 <div class="three">
 <div class="link1">
         <h1>SUBMIT</h1>
@@ -42,40 +45,47 @@
 <br><br>
 
 <h1 class="past">FEATURED PROJECTS</h1>
-<div class="block">
-    <img src="/images/oscar-keys-58399-unsplash.jpg" alt="">
-    <p>
-        ARTIST: Lanky<br>
-        PROJECT: LineItUp! <br>
-        Lanky first gained buzz after catching a remix with ASAP MOB artists Twelvvy and ygAddy on the track 'Bands'. This week he drops his debut tape 'LineItUp!', stream all 7 songs on soundcloud.
-        <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/442434540&color=%230a0506&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-    </p>
+
+<div class="left">
+        <div class="block">
+        <h1>Lanky Smoove - LineItUp!</h1>
+        <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/527550018&color=%230a0506&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        </div>
+        <div class="block">
+                <h1>Lanky Smoove - LineItUp!</h1>
+                <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/527550018&color=%230a0506&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        </div>
+        <div class="block">
+                <h1>Lanky Smoove - LineItUp!</h1>
+                <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/527550018&color=%230a0506&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        </div>
+        <div class="block">
+                <h1>Lanky Smoove - LineItUp!</h1>
+                <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/527550018&color=%230a0506&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        </div>
+    </div>
+
+<div class="right">
+    <div class="block">
+    <h1>Lanky Smoove - LineItUp!</h1>
+    <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/388688328&color=%230a0506&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+    </div>
+    <div class="block">
+            <h1>Lanky Smoove - LineItUp!</h1>
+            <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/388688328&color=%230a0506&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+    </div>
+    <div class="block">
+            <h1>Lanky Smoove - LineItUp!</h1>
+            <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/388688328&color=%230a0506&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+    </div>
+    <div class="block">
+            <h1>Lanky Smoove - LineItUp!</h1>
+            <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/388688328&color=%230a0506&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+    </div>
 </div>
 
-<div class="block">
-<img src="/images/hands.jpg" alt="">
-<p>
-        ARTIST: T Based<br>
-        PROJECT: Based World Vol.1 <br>
-        Lanky first gained buzz after catching a remix with ASAP MOB artists Twelvvy and ygAddy on the track 'Bands'. This week he drops his debut tape 'LineItUp!', stream all 7 songs on soundcloud.
-        <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/442434540&color=%230a0506&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-</p>
-</div>
-
-<div class="block">
-<img src="/images/oscar-keys-58399-unsplash.jpg" alt="">
-<p>
-        ARTIST: Lanky<br>
-        PROJECT: LineItUp! <br>
-        Lanky first gained buzz after catching a remix with ASAP MOB artists Twelvvy and ygAddy on the track 'Bands'. This week he drops his debut tape 'LineItUp!', stream all 7 songs on soundcloud.
-        <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/442434540&color=%230a0506&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-</p>
-</div>
 
 
-<div class="footer">
-    <p>Set up interviews. Dropping something soon? Let us know and we will post it.</p>
-</div>
     
 </body>
 </html>
