--- a/interviews.html
+++ b/interviews.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div class="header">        
-        <p>Explore the work of upcoming artists.<br>Exclusive interviews, releases and more.</p>
+            <p><a href=""><i class="fa fa-instagram" style="font-size:30px;"></a></i> 
+
+            <a href=""><i class="fa fa-twitter" style="font-size:30px;"></i></p>      
+                
         <h1><a href="/entrance.html">Music World Wide</a></h1>
 
     </div>
@@ -19,7 +22,7 @@
     <a href="/projects.html">
         <div class="one">
          <div class="link1">
-             <h1>PROJECTS</h1>
+             <h1>NEW RELEASES</h1>
             </div>
     </div>
 </a>
@@ -30,7 +33,7 @@
         </div>
     </div>
 </a>
-    <a href="">
+    <a href="/submit.html">
         <div class="three">
         <div class="link1">
             <h1>SUBMIT</h1>
@@ -71,9 +74,6 @@
 
 
 
-<div class="footer">
-    <p>Set up interviews. Dropping something soon? Let us know and we will post it.</p>
-</div>
     
 </body>
 </html>
