--- a/entrance.html
+++ b/entrance.html
@@ -51,8 +51,7 @@
         <img src="/images/oscar-keys-58399-unsplash.jpg" alt="">
         <p>
             ARTIST: Lanky<br>
-            PROJECT: LineItUp! <br>
-            Lanky first gained buzz after catching a remix with ASAP MOB artists Twelvvy and ygAddy on the track 'Bands'. This week he drops his debut tape 'LineItUp!', stream all 7 songs on soundcloud.
+            PROJECT: LineItUp! <br>dolorum suscipit non soluta asperiores unde ullam fuga, doloremque, hic consectetur repellendus neque mollitia architecto labore adipisci nam?
             <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/442434540&color=%230a0506&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </p>
     </div>
